Update tex file with todonotes package

--- a/T7.1/O7.1.9/Evaluation_Platform_against_WP2.tex
+++ b/T7.1/O7.1.9/Evaluation_Platform_against_WP2.tex
@@ -1,6 +1,7 @@
 \documentclass{openetcs_report}
 % Use the option "nocc" if the document is not licensed under Creative Commons
 %\documentclass[nocc]{template/openetcs_article}
+\usepackage{todonotes}
 \usepackage{rotating,url,color}
 \usepackage[hidelinks]{hyperref}
 %hidelinks put some problems on some distributions
