Extended template for tool description

--- a/T7.1/O7.1.9/template_description.tex
+++ b/T7.1/O7.1.9/template_description.tex
@@ -32,7 +32,7 @@ When a note is required, please follow this list :
 
 All the notes can be commented under each table.
 
-\section{Presentation}
+\section{Presentation of the tool platform}
 
 This section gives a quick presentation of the tool.
 
@@ -42,9 +42,23 @@ This section gives a quick presentation of the tool.
 \item[License] \todo{Kind of license}
 \end{description}
 
-\paragraph{Abstract} Short abstract on the approach and tool (10 lines max)
-
+\subsection{Summary}
+\paragraph{Summary} 
+Brief introduction to what the tool does
 \paragraph{Publications} Short list of publications on the approach (5 max)
+\paragraph{Support and Survivability}
+Which kind of support is provided? Commercial support through a
+company, community support through a mailing list, both, other?
+Pricing. \\
+Is the tool likely to exist in 10 years? Is it supported by a strong
+company that can fix potential bugs in the tool?\\
+
+Stable or recommended version of the tool
+\subsection{Applicability}
+\paragraph{Key capabilities}
+\paragraph{Main restrictions}
+\paragraph{Expertise level}which prerequisite is needed to use the
+tool
 
 \section{Use and usage of  of the Tool}
 According WP2 requirements, give a note for characteristics of the use of the tool (from 0 to 3) :
